--- a/templates/dashboard/cursos.html
+++ b/templates/dashboard/cursos.html
@@ -8,7 +8,9 @@
     </ol>
 </nav>
 
-<div class="container">
+<!--<div class="container">
+</div>-->
+
     <div class="card">
         <div class="card-header bg-red-usat text-white">
             Cursos
@@ -163,7 +165,7 @@
             </div>
         </div>
     </div>
-</div>
+
 
 <script>
     $(document).ready(function () {
