--- a/templates/dashboard/cursos.html
+++ b/templates/dashboard/cursos.html
@@ -16,27 +16,28 @@
             Cursos
         </div>
         <div class="card-body">
-            <div class="table-responsive">
-                <table id="tabla-curso" class="table table-striped table-bordered">
-                    <thead>
-                        <tr>
-                            <th>Nombre</th>
-                            <th>Código</th>
-                            <th>Créditos</th>
-                            <th>Horas Teoría</th>
-                            <th>Horas Práctica</th>
-                            <th>Ciclo</th>
-                            <th>Tipo</th>
-                            <th>Estado</th>
-                            <th>Plan de Estudio</th>
-                            <th>Opciones</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <!-- Los datos de los cursos se cargarán dinámicamente aquí -->
-                    </tbody>
-                </table>
-            </div>
+            <!-- <div class="table-responsive">
+                
+            </div> -->
+            <table id="tabla-curso" class="table table-striped table-bordered">
+                <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Código</th>
+                        <th>Créditos</th>
+                        <th>Horas Teoría</th>
+                        <th>Horas Práctica</th>
+                        <th>Ciclo</th>
+                        <th>Tipo</th>
+                        <th>Estado</th>
+                        <th>Plan de Estudio</th>
+                        <th>Opciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <!-- Los datos de los cursos se cargarán dinámicamente aquí -->
+                </tbody>
+            </table>
         </div>
         <div class="card-footer">
             <a href="#" id="btn_agregar_curso" class="btn btn-success">Agregar Nuevo Curso</a>
