--- a/templates/dashboard/cursos.html
+++ b/templates/dashboard/cursos.html
@@ -322,7 +322,7 @@
             var id = $(this).data('id');
 
             $.ajax({
-                url: '/get_curso/' + id,
+                url: '/obtener_curso/' + id,
                 type: 'GET',
                 contentType: 'application/json',
                 success: function (response) {
