--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -126,6 +126,13 @@
 						</li>
 
 						<li class="sidebar-item">
+							<a class="sidebar-link" href="{{url_for('ambientesxcurso')}}">
+								<i class="align-middle" data-feather="check-square"></i> <span
+									class="align-middle">Ambientes por Curso</span>
+							</a>
+						</li>
+
+						<li class="sidebar-item">
 							<a class="sidebar-link" href="{{url_for('docentes')}}">
 								<i class="align-middle" data-feather="grid"></i> <span
 									class="align-middle">Docentes</span>
